change img attribute to span with background-image in css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <div class="content">
-            <h1>Le DISII de Dreaux</h1>
-            <h2>Recherche de stage de 06 Mai à 19 juillet</h2>
+            <h1>Le DISII de Dreux</h1>
+            <h2>Recherche de stage du 06 mai au 19 juillet 2021</h2>
         </div>
     </header>
 
@@ -24,13 +24,13 @@
             <div class="left"></div>
             <div class="right">
                 <div class="container">
-                    <h3>About us</h3>
+                    <h3>À propos</h3>
                     <p>Voici l'équipe du campus CCI 28 qui est en formation de <strong>Développeur Intégrateur de Solutions Intranet/Internet</strong>.</p>
                     <p>Nous voulons être cette pièce qui complétera votre activité et vous aidera à avancer vers le succès.</p>
-                    <p>Nous sommes à la recherche d'un stage qui se déroulera du 06 Mai au 19 juillet 2021 et dans lequel nous pourrons mettre en valeur et en action nos connaissances et nos acquis et qui vous permettra de bénéficier de ces services.</p>
-                    <p>Nous pouvons poser proposer des améliorations à votre site internet à votre base de données ou à d'autres aspects de votre système informatique.</p>
+                    <p>Nous sommes à la recherche d'un stage qui se déroulera du 06 mai au 19 juillet 2021 et dans lequel nous pourrons mettre en valeur et en action nos connaissances et nos acquis et qui vous permettra de bénéficier de ces services.</p>
+                    <p>Nous pouvons proposer des améliorations à votre site internet à votre base de données ou à d'autres aspects de votre système informatique.</p>
                     <p>Besoin d'un webmaster d'un développeur back-end d'un intégrateur front-end ou d'un Community Manager, vous pouvez faire appel à nous !</p>
-                    <a href="https://www.campuscci.fr/liste-formations/liste-formations-bac2/liste-formations-dev-integrateur-solutions-internet&ar=" target="_blank" class="btn">La prgramme de la formation</a>
+                    <a href="https://www.campuscci.fr/liste-formations/liste-formations-bac2/liste-formations-dev-integrateur-solutions-internet&ar=" target="_blank" class="btn">Le programme de la formation</a>
                 </div>
             </div>
         </div>
@@ -39,11 +39,11 @@
 
     <main>
         <div class="content">
-            <h2>Développeurs Full-stack</h2>
+            <h2>Développeurs Full-stack | Web design | CMS Développeurs | Gestion de projet</h2>
 
             <div class="container">
                 <!-- <a href="#" class="card" target="_blank">
-                    <img src="/style/imgs/">
+                    <span style="background-image: url('/style/imgs/pexels-startup-stock-photos-7376.jpg');"></span>
                     <h3>Lorem text</h3>
                 </a>; -->
             </div>
@@ -55,7 +55,7 @@
             <div class="logo">
                 <a href="https://www.campuscci.fr/" target="_blank"></a>
             </div>
-            <p>&copy; 2020 - Campus CCI | DISII Dreaux</p>
+            <p>&copy; 2020 - Campus CCI | DISII Dreux</p>
         </div>
     </footer>
 </body>
